# hacker_news_reader

./: .gitignore  CLAUDE.md  Cargo.toml  HN_Post.md  HN_Post_Chinese.md  README.md  build_dmg.sh  screenshot_recommendation.txt
landing_page/: README.md  index.html  package-lock.json  package.json  vite.config.js
landing_page/public/css/: global.css
landing_page/src/: App.svelte
landing_page/src/components/: Download.svelte  Features.svelte  Footer.svelte  Header.svelte  Hero.svelte  Screenshot.svelte
src/: db.rs  hn_client.rs  main.rs  models.rs
