[package]
name = "hacker_news_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
open = "5.3.2"
regex = "1.10.2"
html-escape = "0.2.13"