[package]
name = "hacker_news_reader"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Hacker News Reader"
identifier = "com.haojiang99.hackernewsreader"
version = "1.0.0"
icon = ["logo/logo.png"]
copyright = "Copyright (c) 2024 Hao Jiang. All rights reserved."
category = "Developer Tool"
short_description = "A fast native Hacker News reader"
long_description = "A native desktop application for browsing Hacker News with a clean, modern interface. Built with Rust and egui."

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
open = "5.3.2"
regex = "1.10.2"
html-escape = "0.2.13"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2.0.0"
image = "0.25.1" # Added for icon loading
md5 = "0.7.0" # For HTML caching optimization
lazy_static = "1.4.0" # For global font size
urlencoding = "2.1.3" # For URL encoding in share links
arboard = "3.3.0" # For clipboard operations